--- a/_notebooks/2024-1-31-Review_Ticket.ipynb
+++ b/_notebooks/2024-1-31-Review_Ticket.ipynb
@@ -44,12 +44,22 @@
     "    id = db.Column(db.Integer, primary_key=True)\n",
     "    username = db.Column(db.String(128), unique=True, nullable=False)\n",
     "    password = db.Column(db.String(128), nullable=False)\n",
+    "    what_grade = db.Column(db.String(50))  # New column for \"what grade\"\n",
+    "    email = db.Column(db.String(128))  # New column for \"email\"\n",
+    "    date_of_birth = db.Column(db.String(10))  # New column for \"date of birth\"\n",
+    "    gender = db.Column(db.String(10))  # New column for \"gender\"\n",
+    "    ip_address = db.Column(db.String(15))  # New column for IP address\n",
     "\n",
     "    def serialize(self):\n",
     "        return {\n",
     "            \"id\": self.id,\n",
     "            \"username\": self.username,\n",
-    "            \"password\": self.password\n",
+    "            \"password\": self.password,\n",
+    "            \"what_grade\": self.what_grade,\n",
+    "            \"email\": self.email,\n",
+    "            \"date_of_birth\": self.date_of_birth,\n",
+    "            \"gender\": self.gender,\n",
+    "            \"ip_address\": self.ip_address\n",
     "        }"
    ]
   },
