--- a/_notebooks/2024-1-31-Review_Ticket.ipynb
+++ b/_notebooks/2024-1-31-Review_Ticket.ipynb
@@ -203,6 +203,13 @@
     "      });\n",
     "    }"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. Image Screen shots"
+   ]
   }
  ],
  "metadata": {
