--- a/_notebooks/2024-2-16-N@TMREview.ipynb
+++ b/_notebooks/2024-2-16-N@TMREview.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "---\n",
     "toc: true\n",
-    "comments: false\n",
+    "comments: True\n",
     "layout: post\n",
     "title: N@TM Review\n",
     "description:  \n",
@@ -65,11 +65,11 @@
    "source": [
     "<h3>Pictures of NATM</h3>\n",
     "\n",
-    "<img src=\"images/IMG_1019 2.jpeg\"><br></img>\n",
-    "<img src=\"images/IMG_1020 2.jpeg\"><br></img>\n",
-    "<img src=\"images/IMG_1032 2.jpeg\"><br></img>\n",
-    "<img src=\"images/IMG_1033 2.jpeg\"><br></img>\n",
-    "<img src=\"images/IMG_1034 2.jpeg\"><br></img>"
+    "<img src=\"images/IMG_1019 2.jpeg\"><br>\n",
+    "<img src=\"images/IMG_1020 2.jpeg\"><br>\n",
+    "<img src=\"images/IMG_1032 2.jpeg\"><br>\n",
+    "<img src=\"images/IMG_1033 2.jpeg\"><br>\n",
+    "<img src=\"images/IMG_1034 2.jpeg\"><br>"
    ]
   }
  ],
