--- a/_notebooks/2024-2-25-Tri2_Induvidual_Review.ipynb
+++ b/_notebooks/2024-2-25-Tri2_Induvidual_Review.ipynb
@@ -28,6 +28,7 @@
    "metadata": {},
    "source": [
     "<h3>Project Overview: Game Console</h3>\n",
+    "\n",
     "**Team: Cayden, Saaras, Eric, Austin**\n",
     "\n",
     "\n",
@@ -49,6 +50,54 @@
     "**Tic Tac Toe**\n",
     "\n",
     "For the crosswords, it was not the exact gameplay of regular crossword but rather a rip off. The user is prompted with hints for the word and it given a timer to figure out the word. Alltough a bit buggy the corssword game aims to check for hte user's skill in identifying the words rather than being dependent on the board itslef. Overall with the hint the user must guess a certain amount of words in a specific amount of time."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Crosswords</h3>\n",
+    "\n",
+    "**Component A: Program Code**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "html"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "<html>\n",
+    "    <body>\n",
+    "        <table>\n",
+    "            <thead>\n",
+    "            <tr>\n",
+    "                <th>Requirments</th>\n",
+    "                <th>Completed</th>\n",
+    "                </tr>\n",
+    "            </thead>\n",
+    "            <tbody>\n",
+    "                <tr>\n",
+    "                    <td>Instructions for input from the user (including user actions that trigger events)</td>\n",
+    "                    <td>\n",
+    "                        \"The check answer function takes the answer inputted into the user box and compares it with the mapping that exist in the code above. I fhte answer is correct the user is allowed to move on to the next hint and the correct word in displayed on the crossword box and if the suer in incorrect then the screen prompts them to recheck their answer or they are allowed to give up using the give up button which links to another function that links the correct word to an alert and the corssword box. THe check fucniton is as below.\"\n",
+    "                        <img src=\"https://github.com/srivaidyas/student2.0/blob/main/images/Screenshot%202024-02-25%20at%207.50.53%E2%80%AFPM.png\">\n",
+    "                        \"Focusing on the two main aspects of this code that really take into consideration the user input\"\n",
+    "                        <img>\n",
+    "                        <img>\n",
+    "                        1. The checkAnswer() function retrieves the value entered by the user in the input box using document.querySelector('.input-box').value.trim().toUpperCase(). \n",
+    "                        2. An event listener is set up to listen for keyup events in the input box. When the user presses the Enter key, the checkAnswer() function is called to check the user's answer.\n",
+    "                        3. THe answer is cross referenced along iwht the provided mappings for the correct answer\n",
+    "                        4. Subsequent actions are triggered\n",
+    "                    </td>\n",
+    "                </tr>\n",
+    "            </tbody>\n",
+    "        </table>\n",
+    "    </body>"
    ]
   }
  ],
