--- a/_notebooks/2024-03-12-CSP-MCQ-2020-missed.ipynb
+++ b/_notebooks/2024-03-12-CSP-MCQ-2020-missed.ipynb
@@ -1,16 +1,17 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "---\n",
-    "comments: true\n",
+    "toc: true\n",
+    "comments: True\n",
     "layout: post\n",
-    "title: MCQ 2020 Frequently Missed Questions\n",
-    "description: Questions and sample Python code to represent the most frequently missed questions on the 2020 AP Computer Science A Multiple Choice Exam. \n",
-    "type: collab\n",
-    "courses: { csp: {week: 26} }\n",
+    "title: CSP MCQ\n",
+    "description:  \n",
+    "type: hacks\n",
+    "courses: { compsci: {week: 26} }\n",
     "---"
    ]
   },
