--- a/_notebooks/2024-03-14-Test_Correction.ipynb
+++ b/_notebooks/2024-03-14-Test_Correction.ipynb
@@ -392,6 +392,45 @@
     "Answer C\n",
     "Correct. This code segment assigns the characters to the left of position n to newStr. The code segment then concatenates newStr with the substring consisting of the characters to the right of position n. For example, if oldStr is \"best\" and n is 3, the code segment assigns \"be\" to newStr, then concatenates \"be\" and the substring \"t\" and assigns the result \"bet\" to newStr.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4>Takeaways</h4>\n",
+    "\n",
+    "- 3.4: Strings\n",
+    "- 3.6: Conditionals\n",
+    "- 3.5: Boolean Expressions\n",
+    "- 5.1: Benefical and Harmful effects\n",
+    "- 5.6: Safe computing\n",
+    "- 4.3: Parellel and distributed computing\n",
+    "- 3.10: Lists\n",
+    "- 3.3: Mathematical Expressions\n",
+    "- 2.2: Binary numbers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4>Daily videos references</h4>\n",
+    "\n",
+    "- [Unit 1](https://apclassroom.collegeboard.org/103/home?unit=1)\n",
+    "- [Unit 2](https://apclassroom.collegeboard.org/103/home?unit=2)\n",
+    "- [Unit 3](https://apclassroom.collegeboard.org/103/home?unit=3)\n",
+    "- [Unit 4](https://apclassroom.collegeboard.org/103/home?unit=4)\n",
+    "- [Unit 5](https://apclassroom.collegeboard.org/103/home?unit=5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4>Reflection</h4>\n",
+    "\n",
+    "IN conclusion, this practice exam was helpful for the AP Exam, the way the questions were made and the topics i need to learn more about rlly help for preparing for the test. Overall i understood what i need to do to improve my MC score."
+   ]
   }
  ],
  "metadata": {
