--- a/_notebooks/2024-04-17-CPT_Write_Up.ipynb
+++ b/_notebooks/2024-04-17-CPT_Write_Up.ipynb
@@ -202,7 +202,53 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "**Targets:**<br>\n",
+    "\n",
+    "Blog JavaScript API fetch code and formatting code to display JSON.\n",
+    "In Chrome inspect, show response of JSON objects from fetch of GET, POST, and UPDATE methods.\n",
+    "In the Chrome browser, show a demo (GET) of obtaining an Array of JSON objects that are formatted into the browsers screen.\n",
+    "In JavaScript code, describe fetch and method that obtained the Array of JSON objects.\n",
+    "In JavaScript code, show code that performs iteration and formatting of data into HTML.\n",
+    "In the Chrome browser, show a demo (POST or UPDATE) gathering and sending input and receiving a response that show update. Repeat this demo showing both success and failure.\n",
+    "In JavaScript code, show and describe code that handles success. Describe how code shows success to the user in the Chrome Browser screen.\n",
+    "In JavaScript code, show and describe code that handles failure. Describe how the code shows failure to the user in the Chrome Browser screen."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/main/images/Screenshot%202024-04-18%20at%203.05.55%E2%80%AFPM.png\"><center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/4e445f5a3dc90a04d201ceebedcde0a5d826c7e9/images/Screenshot%202024-04-18%20at%202.16.25%E2%80%AFPM.png\"><center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/4e445f5a3dc90a04d201ceebedcde0a5d826c7e9/images/Screenshot%202024-04-18%20at%202.16.05%E2%80%AFPM.png\"><center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/1aa946f66c638e2ba88ee3ee7f57285056973b88/images/Screenshot%202024-04-18%20at%203.09.48%E2%80%AFPM.png\"><center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The pictures show the js code formatting into HTMl. In chorome inspect the result of a post or get request is shown. A catch error is also displayed."
+   ]
   }
  ],
  "metadata": {
