--- a/_notebooks/2024-04-17-CPT_Write_Up.ipynb
+++ b/_notebooks/2024-04-17-CPT_Write_Up.ipynb
@@ -55,14 +55,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/4e445f5a3dc90a04d201ceebedcde0a5d826c7e9/images/Screenshot%202024-04-18%20at%202.14.51%E2%80%AFPM.png\"></center>"
+    "<center><img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/4e445f5a3dc90a04d201ceebedcde0a5d826c7e9/images/Screenshot%202024-04-18%20at%202.14.51%E2%80%AFPM.png\"></center><br>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/4e445f5a3dc90a04d201ceebedcde0a5d826c7e9/images/Screenshot%202024-04-18%20at%202.15.00%E2%80%AFPM.png\"></center>"
+    "<center><img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/4e445f5a3dc90a04d201ceebedcde0a5d826c7e9/images/Screenshot%202024-04-18%20at%202.15.00%E2%80%AFPM.png\"></center><br>"
    ]
   },
   {
@@ -92,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/4e445f5a3dc90a04d201ceebedcde0a5d826c7e9/images/Screenshot%202024-04-18%20at%202.15.18%E2%80%AFPM.png\"></center>"
+    "<center><img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/4e445f5a3dc90a04d201ceebedcde0a5d826c7e9/images/Screenshot%202024-04-18%20at%202.15.18%E2%80%AFPM.png\"></center><br>"
    ]
   },
   {
@@ -123,14 +123,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/4e445f5a3dc90a04d201ceebedcde0a5d826c7e9/images/Screenshot%202024-04-18%20at%202.15.11%E2%80%AFPM.png\"></center>"
+    "<center><img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/4e445f5a3dc90a04d201ceebedcde0a5d826c7e9/images/Screenshot%202024-04-18%20at%202.15.11%E2%80%AFPM.png\"></center><br>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/4e445f5a3dc90a04d201ceebedcde0a5d826c7e9/images/Screenshot%202024-04-18%20at%202.15.25%E2%80%AFPM.png\"></center>"
+    "<center><img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/4e445f5a3dc90a04d201ceebedcde0a5d826c7e9/images/Screenshot%202024-04-18%20at%202.15.25%E2%80%AFPM.png\"></center><br>"
    ]
   },
   {
@@ -159,7 +159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/4e445f5a3dc90a04d201ceebedcde0a5d826c7e9/images/Screenshot%202024-04-18%20at%202.15.34%E2%80%AFPM.png\"></center>"
+    "<center><img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/4e445f5a3dc90a04d201ceebedcde0a5d826c7e9/images/Screenshot%202024-04-18%20at%202.15.34%E2%80%AFPM.png\"></center><br>"
    ]
   },
   {
@@ -174,7 +174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/4e445f5a3dc90a04d201ceebedcde0a5d826c7e9/images/Screenshot%202024-04-18%20at%202.15.56%E2%80%AFPM.png\"></center>"
+    "<center><img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/4e445f5a3dc90a04d201ceebedcde0a5d826c7e9/images/Screenshot%202024-04-18%20at%202.15.56%E2%80%AFPM.png\"></center><br>"
    ]
   },
   {
@@ -189,7 +189,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/de44bf3d769cb743674c6a1e0504ca36cdfc1a42/images/Screenshot%202024-04-18%20at%202.46.22%E2%80%AFPM.png\"></center>"
+    "<center><img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/de44bf3d769cb743674c6a1e0504ca36cdfc1a42/images/Screenshot%202024-04-18%20at%202.46.22%E2%80%AFPM.png\"></center><br>"
    ]
   },
   {
@@ -219,28 +219,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/main/images/Screenshot%202024-04-18%20at%203.05.55%E2%80%AFPM.png\"></center>"
+    "<center><img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/main/images/Screenshot%202024-04-18%20at%203.05.55%E2%80%AFPM.png\"></center><br>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/4e445f5a3dc90a04d201ceebedcde0a5d826c7e9/images/Screenshot%202024-04-18%20at%202.16.25%E2%80%AFPM.png\"></center>"
+    "<center><img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/4e445f5a3dc90a04d201ceebedcde0a5d826c7e9/images/Screenshot%202024-04-18%20at%202.16.25%E2%80%AFPM.png\"></center><br>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/4e445f5a3dc90a04d201ceebedcde0a5d826c7e9/images/Screenshot%202024-04-18%20at%202.16.05%E2%80%AFPM.png\"></center>"
+    "<center><img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/4e445f5a3dc90a04d201ceebedcde0a5d826c7e9/images/Screenshot%202024-04-18%20at%202.16.05%E2%80%AFPM.png\"></center><br>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/1aa946f66c638e2ba88ee3ee7f57285056973b88/images/Screenshot%202024-04-18%20at%203.09.48%E2%80%AFPM.png\"></center>"
+    "<center><img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/1aa946f66c638e2ba88ee3ee7f57285056973b88/images/Screenshot%202024-04-18%20at%203.09.48%E2%80%AFPM.png\"></center><br>"
    ]
   },
   {
