--- a/2024-02-8-Main.md
+++ b/2024-02-8-Main.md
@@ -79,12 +79,12 @@ permalink: /tictactoe/
   <div class="box">
     <img src="https://t0.gstatic.com/licensed-image?q=tbn:ANd9GcQsJEpbrBLWAyjRR82eWUxKb4WpXjIOVB-g-KFOkyaP1zSPympYcoYd61hef9xEnRzT" alt="Mathnopoly Image">
     <h2>Tic Tac Toe</h2>
-    <a href="http://127.0.0.1:4200/student//2024/02/08/Tick_Tac_Toe_Hard.html">Play Tic Tac Toe!</a>
+    <a href="https://srivaidyas.github.io/student2.0//2024/04/26/Tick_Tac_Toe_Hard.html">Play Tic Tac Toe!</a>
   </div>
   <div class="box">
     <img src="https://t4.ftcdn.net/jpg/05/33/76/65/360_F_533766568_F7gk4AIzWv2OMbIhc1zEhaL7aElo9M1Q.jpg" alt="Tick Tack Toe Image">
     <h2>Leaderboard</h2>
-    <a href="http://127.0.0.1:4200/student//2024/02/25/leaderboard.html">Leaderboard</a>
+    <a href="https://srivaidyas.github.io/student2.0//2024/04/26/leaderboard-copy.html">Leaderboard</a>
   </div>
   </div>
 </center>
