--- a/_notebooks/2024-04-17-CPT_Write_Up.ipynb
+++ b/_notebooks/2024-04-17-CPT_Write_Up.ipynb
@@ -19,7 +19,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1>CPT Project: Face ID Login/ Game Dashboard</h1>"
+    "<h1>Data Structures Project: Game Dashboard with backend game point system</h1>"
    ]
   },
   {
@@ -99,7 +99,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The three pictres above were run in debugger mode to extract the dat from the backend database owing an error. The first image shows how in VScode when debugger mode was used, the data form the backend database was extrracted and displayed. Unforntuently this does not produce the second requirment as detailed. However, it is visible tha tthe userid and the number of poitns are clearly enxtracted by the backend when run in debugger mode in VScode."
+    "The three pictres above were run in debugger mode to extract the dat from the backend database owing an error. The first image shows how in VScode when debugger mode was used, the data form the backend database was extrracted and displayed. Unforntuently this does not produce the second requirment as detailed. However, it is visible tha tthe userid and the number of poitns are clearly enxtracted by the backend when run in debugger mode in VScode.\n",
+    "\n",
+    "Given the successful extraction of user IDs and points, focus can now shift towards refining the data retrieval process to meet the second requirement. This might involve fine-tuning database queries, ensuring proper error handling, or optimizing the backend code responsible for fetching and formatting the desired data. By iteratively iterating on these aspects and leveraging debugging tools effectively, you can enhance the reliability and efficiency of data extraction from the backend database."
    ]
   },
   {
@@ -137,7 +139,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The codsnippets above show the frist two requirments. The code is the API code that shows the resquest and respones of the data and how its managed. The snippet also shows the CRUD operations which include the Get, Post, and update methods. The algorithmic conditions used to direct request to apporprtate Python method based on request methods is shown in the in shown-when data is posted its run though the code to check and update the datatable according to the user and where the user is located on the databse table. It also has erro mesxsages that either indicate whether the points were updated or not in the databse backend."
+    "The codsnippets above show the frist two requirments. The code is the API code that shows the resquest and respones of the data and how its managed. The snippet also shows the CRUD operations which include the Get, Post, and update methods. The algorithmic conditions used to direct request to apporprtate Python method based on request methods is shown in the in shown-when data is posted its run though the code to check and update the datatable according to the user and where the user is located on the databse table. It also has erro mesxsages that either indicate whether the points were updated or not in the databse backend.\n",
+    "\n",
+    "In ogther words, The provided code snippets offer insights into the API's functionality, encompassing CRUD operations such as GET, POST, and update methods. Notably, the algorithmic conditions delineate the routing of requests to pertinent Python methods based on request methods. This ensures efficient handling of incoming data, particularly during POST requests where data undergoes validation and subsequent updates in the database. Error messages embedded within the code serve as indicators of successful or unsuccessful point updates in the backend database, enhancing transparency and troubleshooting capabilities within the API framework."
    ]
   },
   {
@@ -167,7 +171,7 @@
    "metadata": {},
    "source": [
     "<h3>400</h3><br>\n",
-    "Postman on 400 which shows the error when missing body on a POST request. The data sent below is misisng the game poitns which leads to a 400 and a bad request"
+    "Encountering a 400 error in Postman typically signifies a \"Bad Request\" status, often triggered by malformed or incomplete data sent in a POST request. In this scenario, the absence of the \"game points\" data in the request payload results in the 400 error response. To rectify this issue, ensure that all required fields, including \"game points,\" are included in the request body before sending the POST request. By providing comprehensive and accurate data in the request payload, you can mitigate the occurrence of 400 errors and facilitate successful data processing by the API endpoint."
    ]
   },
   {
@@ -182,7 +186,7 @@
    "metadata": {},
    "source": [
     "<h3>405</h3><br>\n",
-    "Postman on a put method. As the picture shows below the put request is a 405 denied error.\n"
+    "Encountering a 405 error in Postman typically indicates a \"Method Not Allowed\" status, implying that the requested HTTP method (PUT, in this case) is not supported by the API endpoint. The screenshot provided suggests that the PUT request is being denied, possibly due to restrictions imposed by the API server or misconfiguration of the endpoint. To address this issue, verify the allowed HTTP methods for the specific endpoint and ensure that PUT requests are permitted. Additionally, review the API documentation or consult with the server administrators to resolve any discrepancies and enable PUT requests for the intended resource."
    ]
   },
   {
@@ -247,7 +251,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The pictures show the js code formatting into HTMl. In chorome inspect the result of a post or get request is shown. A catch error is also displayed."
+    "The provided pictures depict JavaScript code being formatted into HTML for inspection within Chrome's Developer Tools. These tools offer insights into the outcome of POST or GET requests, showcasing the response data retrieved from the server. Additionally, a catch error is displayed, indicating an issue encountered during the request process. Catch errors typically signify failed request attempts, often due to network issues, server errors, or incorrect request configurations. To address catch errors, thorough debugging and error handling procedures should be implemented, including analyzing error messages, checking network connectivity, and verifying the request parameters. By effectively diagnosing and resolving catch errors, developers can ensure robust and reliable communication between client and server components within their web applications."
    ]
   }
  ],
