--- a/_notebooks/2024-04-17-CPT_Write_Up.ipynb
+++ b/_notebooks/2024-04-17-CPT_Write_Up.ipynb
@@ -8,7 +8,7 @@
     "toc: true\n",
     "comments: True\n",
     "layout: post\n",
-    "title: CPT Write Up   \n",
+    "title: Data Structures Combined Write-Up \n",
     "description:  \n",
     "type: tangibles\n",
     "courses: { compsci: {week: 30} }\n",
