--- a/_posts/2024-05-09-Week_33_Plans.md
+++ b/_posts/2024-05-09-Week_33_Plans.md
@@ -2,16 +2,16 @@
 toc: true
 comments: false
 layout: post
-title: Week 33 Plans
-description: These are the plans for week 33 with uses the utterence bot
+title: Week 33 Summary
+description: These are the Summary for week 33 with uses the utterence bot
 type: plans
 courses: { compsci: {week: 33} }
 image: images/plan-dice-760.jpg
 ---
 
 
-#### Plans for week 33
-These plans include detailed steps for week 33 assignment
+#### Summary for week 33
+These Summary include detailed steps for week 33 assignment
 
 <script src="https://utteranc.es/client.js"
     repo="srivaidyas/student2.0"
