--- a/_notebooks/2024-04-25-Interview_Portfolio.ipynb
+++ b/_notebooks/2024-04-25-Interview_Portfolio.ipynb
@@ -8,10 +8,10 @@
     "toc: true\n",
     "comments: True\n",
     "layout: post\n",
-    "title: Collegeboard FRQ Questions  \n",
+    "title: Code Portfolio\n",
     "description:  \n",
     "type: tangibles\n",
-    "courses: { compsci: {week: 31} }\n",
+    "courses: { compsci: {week: 37} }\n",
     "---"
    ]
   },
@@ -19,13 +19,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1>Collegeboard FRQ Questions</h1>"
+    "<h1>Interview Portfolio</h1>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "<h3>Link CSP Code Blog of the 2023-24 Year</h3>\n",
+    "\n",
+    "Throughout the school year, I've spent time and effort building my blog. This blog features all my major projects that I've worked on throughout the school year. Moreover, they feature school lessons and teacher codes that have helped me throughout the course and for AP Prep.\n",
+    "\n",
+    "<a href=\"https://srivaidyas.github.io/student2.0/AD_compsci.html\">Link to my blog</a>"
+   ]
   }
  ],
  "metadata": {
