--- a/_notebooks/2024-04-25-Interview_Portfolio.ipynb
+++ b/_notebooks/2024-04-25-Interview_Portfolio.ipynb
@@ -9,7 +9,7 @@
     "comments: True\n",
     "layout: post\n",
     "title: Code Portfolio\n",
-    "description:  \n",
+    "description: Interview Portfolio for AP Computer Science Principles\n",
     "type: tangibles\n",
     "courses: { compsci: {week: 37} }\n",
     "---"
