--- a/_notebooks/2024-06-4-NATM.ipynb
+++ b/_notebooks/2024-06-4-NATM.ipynb
@@ -318,35 +318,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Intext data for encryption + sen"
+    "1. Intext data for encryption\n",
+    "<center>\n",
+    "<img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/main/images/Screenshot%202024-06-04%20at%2012.55.58%E2%80%AFPM.png\"></center>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Sending data for encryption\n"
+    "2. Sending data for encryption\n",
+    "<center>\n",
+    "<img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/main/images/Screenshot%202024-06-04%20at%2012.57.47%E2%80%AFPM.png\"></center>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Visible data on the backend database"
+    "3. Visible data on the backend database\n",
+    "<center>\n",
+    "<img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/main/images/Screenshot%202024-06-04%20at%2012.56.18%E2%80%AFPM.png\"><center>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Getting teh encrypted data and the encrypted id"
+    "4. Getting the encrypted data and the encrypted id\n",
+    "<center>\n",
+    "<img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/main/images/Screenshot%202024-06-04%20at%2012.56.25%E2%80%AFPM.png\"></center>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Using encrypted id to get raw data back in decypter"
+    "5. Using encrypted id to get raw data back in decypter\n",
+    "<center>\n",
+    "<img src=\"https://raw.githubusercontent.com/srivaidyas/student2.0/main/images/Screenshot%202024-06-04%20at%2012.56.42%E2%80%AFPM.png\"></center>"
    ]
   }
  ],
